2016-Mar-28 ddamiani    Tag V08-06-04.  Fixed a bug with string names of the Generic1DConfig and Generic1DData types.
2016-Mar-28 ddamiani    Tag V08-06-03.  Added FexConfigV1 and FexDataV1 for usdusb encoders. Derived from psddldata V01-00-38.
2016-Feb-05 ddamiani    Tag V08-06-01.  Fixed bug with TypeId and DetInfo for multi-ccd Andor cameras. Derived from psddldata V01-00-36.
2016-Feb-04 ddamiani    Tag V08-06-00.  Added ConfigV1 and FrameV1 for multi-ccd Andor cameras. Derived from psddldata V01-00-36.
2015-Apr-30 ddamiani    Tag V08-02-07.  Added BldDataAnalogInputV1. Derived from psddldata V01-00-27.
2015-Mar-03 caf         Tag V08-02-06.  Fix bug that prevented indexer from recognizing EvrData::DataV4.
2015-Feb-26 weaver	Tag V08-02-05.  Change XtcMonitorServer to reject connections from extra clients.
2015-Feb-20 caf         Tag V08-02-04.  Adds EvrData::DataV4.  Derived from psddldata V01-00-26.
2014-Nov-25 cpo		Tag V08-01-11.  Add const accessor to IndexList.hh to allow software to convert eventcode-bits to actual event-codes.
2014-Nov-25 weaver	Tag V08-01-10.  Added Quartz::ConfigV2 for hw ROI.
2014-Nov-18 weaver	Tag V08-01-09.  Added TimeTool::ConfigV2,DataV2.  Fix to XtcMonitorServer for slow clients.
2014-Oct-14 weaver	Tag V08-01-07.  Added BldDataSpectrometerV1.
2014-Oct-13 weaver	Tag V08-01-06.  Added Epix100a, built with ddl 'devel' tag.
2014-Oct-05 jana	Tag V08-01-05.  Adds some XCS BLD IPIMBs to BldInfo and latest changes to epix.ddl excluding epix100a and elementV2.  Derived from psddldata V01-00-16.
2014-Oct-01 weaver      Tag V08-01-04.  Adds EvrData::IOConfigV2.  Derived from psddldata V01-00-15.
			Tag V08-01-03.  Adds TimeTool::DataV1.
2014-Sep-15 weaver	Tag V08-01-02.  Derived from psddldata V01-00-13.  Adds TimeTool config and GenericPgp config types.
					Adds L3T::DataV2 type with unbiased selection flag, also in L1AcceptEnv.
2014-Sep-08 cpo 	Tag V08-01-01.  Tomy and Chris move pragma-pack in index/IndexList.hh